--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-native-modal": "^13.0.1",
         "react-native-safe-area-context": "4.5.0",
         "react-native-screens": "~3.20.0",
+        "react-native-simple-toast": "^3.0.2",
         "react-native-super-grid": "^5.0.0",
         "react-native-svg": "13.4.0",
         "react-native-web": "~0.18.10",
