--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-    "name": "chess-app",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
-        "web": "expo start:web",
-        "build:web": "expo build:web",
-        "eject": "expo eject"
-    },
-    "resolutions": {
-        "@types/react": "17.0.2",
-        "@types/react-dom": "17.0.2"
-    },
-    "dependencies": {
-        "@react-navigation/native": "^6.0.10",
-        "@react-navigation/native-stack": "^6.6.2",
-        "@sentry/react-native": "4.13.0",
-        "chess.js": "^1.0.0-beta.5",
-        "dripsy": "^4.1.0",
-        "expo": "^48.0.0",
-        "expo-application": "~5.1.1",
-        "expo-constants": "~14.2.1",
-        "expo-device": "~5.2.1",
-        "expo-status-bar": "~1.4.4",
-        "expo-updates": "~0.16.4",
-        "moment": "^2.29.3",
-        "moment-duration-format": "^2.3.2",
-        "random-profile-generator": "^2.3.0",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-native": "0.71.6",
-        "react-native-modal": "^13.0.1",
-        "react-native-safe-area-context": "4.5.0",
-        "react-native-screens": "~3.20.0",
-        "react-native-simple-toast": "^3.0.2",
-        "react-native-super-grid": "^5.0.0",
-        "react-native-svg": "13.4.0",
-        "react-native-web": "~0.18.10",
-        "sentry-expo": "~6.1.0",
-        "use-timer": "^2.0.1"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.0",
-        "@expo/webpack-config": "^18.0.1",
-        "@types/moment-duration-format": "^2.2.3",
-        "@types/react": "~18.0.27",
-        "@types/react-native": "~0.71.6",
-        "dotenv": "^16.0.1",
-        "expo-cli": "^6.3.2",
-        "prettier": "^2.6.2",
-        "typescript": "^5.0.4"
-    },
-    "private": true
+  "name": "chess-app",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start:web",
+    "build:web": "expo build:web",
+    "eject": "expo eject"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2",
+    "@types/react-dom": "17.0.2"
+  },
+  "dependencies": {
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@sentry/react-native": "5.5.0",
+    "chess.js": "^1.0.0-beta.5",
+    "dripsy": "^4.1.0",
+    "expo": "^49.0.0",
+    "expo-application": "~5.3.0",
+    "expo-constants": "~14.4.2",
+    "expo-device": "~5.4.0",
+    "expo-status-bar": "~1.6.0",
+    "moment": "^2.29.3",
+    "moment-duration-format": "^2.3.2",
+    "random-profile-generator": "^2.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.5",
+    "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-simple-toast": "^3.0.2",
+    "react-native-super-grid": "^5.0.0",
+    "react-native-svg": "13.9.0",
+    "react-native-web": "~0.19.6",
+    "sentry-expo": "~7.0.0",
+    "use-timer": "^2.0.1",
+    "expo-splash-screen": "~0.20.5"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.0",
+    "@expo/webpack-config": "^19.0.0",
+    "@types/moment-duration-format": "^2.2.3",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "~0.71.6",
+    "dotenv": "^16.0.1",
+    "expo-cli": "^6.3.2",
+    "prettier": "^2.6.2",
+    "typescript": "^5.1.3"
+  },
+  "private": true
 }
