--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-application": "~5.3.0",
     "expo-constants": "~14.4.2",
     "expo-device": "~5.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "moment": "^2.29.3",
     "moment-duration-format": "^2.3.2",
@@ -38,9 +39,10 @@
     "react-native-super-grid": "^5.0.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
+    "react-native-worklets-core": "^0.2.4",
     "sentry-expo": "~7.0.0",
     "use-timer": "^2.0.1",
-    "expo-splash-screen": "~0.20.5"
+    "expo-dev-client": "~2.4.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
