--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "react-native-worklets-core": "^0.2.4",
     "sentry-expo": "~7.0.0",
     "use-timer": "^2.0.1",
-    "expo-dev-client": "~2.4.11"
+    "expo-dev-client": "~2.4.11",
+    "@expo/vector-icons": "^13.0.0",
+    "expo-image": "~1.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
