--- a/package.json
+++ b/package.json
@@ -15,15 +15,24 @@
     "@types/react-dom": "17.0.2"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-firebase/app": "^18.6.1",
+    "@react-native-firebase/crashlytics": "^18.6.1",
+    "@react-native-firebase/firestore": "^18.6.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "@sentry/react-native": "5.5.0",
+    "axios": "^1.6.2",
     "chess.js": "^1.0.0-beta.5",
     "dripsy": "^4.1.0",
     "expo": "^49.0.0",
     "expo-application": "~5.3.0",
+    "expo-av": "~13.4.1",
     "expo-constants": "~14.4.2",
+    "expo-dev-client": "~2.4.11",
     "expo-device": "~5.4.0",
+    "expo-image": "~1.3.4",
+    "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "moment": "^2.29.3",
@@ -33,18 +42,17 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-modal": "^13.0.1",
+    "react-native-peerjs": "^1.0.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-simple-toast": "^3.0.2",
     "react-native-super-grid": "^5.0.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
+    "react-native-webrtc": "^111.0.6",
     "react-native-worklets-core": "^0.2.4",
     "sentry-expo": "~7.0.0",
-    "use-timer": "^2.0.1",
-    "expo-dev-client": "~2.4.11",
-    "@expo/vector-icons": "^13.0.0",
-    "expo-image": "~1.3.4"
+    "use-timer": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
