--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/crashlytics": "^18.6.1",
     "@react-native-firebase/firestore": "^18.6.1",
@@ -35,6 +36,7 @@
     "expo-image-picker": "~14.3.2",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.29.3",
     "moment-duration-format": "^2.3.2",
     "random-profile-generator": "^2.3.0",
