--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-incall-manager": "^4.1.0",
     "react-native-modal": "^13.0.1",
     "react-native-peerjs": "^1.0.4",
     "react-native-safe-area-context": "4.6.3",
@@ -50,6 +51,7 @@
     "react-native-simple-toast": "^3.0.2",
     "react-native-super-grid": "^5.0.0",
     "react-native-svg": "13.9.0",
+    "react-native-use-websocket": "^0.2.6",
     "react-native-web": "~0.19.6",
     "react-native-webrtc": "^111.0.6",
     "react-native-worklets-core": "^0.2.4",
