--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "editor.formatOnSave": true,
     "editor.tabSize": 4,
     "prettier.tabWidth": 2,
-    "editor.detectIndentation": false
+    "editor.detectIndentation": false,
+    "editor.inlineSuggest.showToolbar": "always"
 }
