login issues fixed

--- a/app.json
+++ b/app.json
@@ -41,7 +41,13 @@
                 {
                     "photosPermission": "The app accesses your photos to let you share them with your friends."
                 }
-            ]
+            ],
+            [
+                "@config-plugins/react-native-webrtc",
+                {
+                  "microphonePermission": "Allow $(Chess App) to access your microphone"
+                }
+              ]
         ]
     }
 }
