--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "17.0.2"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^7.0.0",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/app": "^18.6.1",
